46
================

19/12/22 Upgrade pdf.js to latest version (attempt to fix iOS app bug)
13/12/22 Rewrite signature.js to use pointer/touch events without touchpunch #1188
13/12/22 Option to have treatments for a regimen created up-front #37 #570
10/12/22 Analyse UA and form fields for bot junk in online forms
07/12/22 Log when a spambot is blocked 
07/12/22 Correct where a previous Swedish translator used "cat" instead of "animal"
06/12/22 Add DaysOnShelter wordkey
05/12/22 Shelter view: location and species (no virtual) mode #1200
05/12/22 Update Hebrew translation (Saggi Neuemann) #1204
02/12/22 Improve form spambot protection
02/12/22 Merged event_new (Roman Safovich) #1186
27/11/22 Cardcom invoicing for non-cc payments (Saggi Neuemann)
23/11/22 Never vaccinated defaults to off #944
21/11/22 adoptable_js: Subsitute \n for <br> to make life easier for callers
21/11/22 Truncate all comment length fields in find result screens
21/11/22 Add extra litter filters for 6 months, 2 years, 3 years
21/11/22 Fix bug that showed litters as complete if any expiry date set
18/11/22 Never vaccinated alert/emblem #481 #944
16/11/22 System log type option, configurable via defaults #804
16/11/22 Show column for littermates on the litter editing screen #1195
16/11/22 Restrict new litters to 20 animals to prevent mistakes #903
10/11/22 Add extra anibase/identichip prefixes: 978102, 972055
09/11/22 follow redirects when retrieving images via http
09/11/22 csvexport animals: include costs with support for importing #1192
09/11/22 csvexport animals: embed URLs instead of base64, allow all pdf/images
07/11/22 Updated Hebrew Translation (Saggi Neuemann)
07/11/22 Classify bulk emails with Precedence: Bulk to stop backscatter
05/11/22 Recalculate age when generating documents from animals
03/11/22 Fix bug where fostered animals show age group at entry instead of now
01/11/22 Disable TinyMCE context menu so browser cut/copy/paste can be used